Adjusted subsequent rows in favorites grid, fixed text overflow in card

--- a/frontend/src/pages/profile/Profile.css
+++ b/frontend/src/pages/profile/Profile.css
@@ -17,7 +17,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  word-break: break-word; /* Ensure long words break to the next line */
+  word-break: break-word;
   border-radius: 5px;
   background-color: rgb(255, 255, 255);
   box-shadow: 10px 7px 35px -11px rgba(0, 0, 0, 0.75);
@@ -25,7 +25,8 @@
   height: calc(100vh - 10rem);
   position: sticky;
   top: calc(6rem + 20px);
-  padding: 1rem; /* Add padding inside the card */
+  padding: 1rem;
+  overflow: auto;
 }
 
 #root > div > div.card > div.data > div > p:nth-child(5) {
@@ -84,7 +85,7 @@ h2 {
   gap: 0.5rem;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-template-rows: 4rem;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: max-content;
 }
 .favorite-courses > h2 {
   grid-column: 1/-1;
@@ -133,5 +134,8 @@ h2 {
     grid-column: 1; /* Set favorite courses to occupy the first column */
     width: 100%; /* Match the width of card and content */
     margin-bottom: 20px; /* Add some spacing between elements */
+  }
+  #root > div > div.card > div.data > div > p:nth-child(5) {
+    font-size: 1.6rem;
   }
 }
